# sst

./: .air.toml  .eslintignore  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .gitpod.yml  .goreleaser.yml  .npmrc  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  bun.lockb  go.mod  go.sum  install  lerna.json  package-lock.json  package.json  patch  pnpm-lock.yaml  pnpm-workspace.yaml  seed.yml  sst_GO  tsconfig.json  turbo.json
.changeset/: afraid-actors-rule.md  afraid-boats-turn.md  afraid-camels-mate.md  afraid-chefs-carry.md  afraid-ducks-smell.md  afraid-ducks-whisper.md  afraid-llamas-change.md  afraid-mugs-refuse.md  afraid-rice-tell.md  aggregate.mjs  angry-papayas-applaud.md  angry-waves-marry.md  beige-wombats-lick.md  big-avocados-destroy.md  big-cheetahs-sing.md  big-coins-rest.md  big-dolphins-mate.md  big-mirrors-develop.md  big-pants-repair.md  big-shrimps-doubt.md  big-tips-kiss.md  blue-actors-give.md  blue-clocks-appear.md  blue-cycles-love.md  blue-icons-guess.md  blue-monkeys-promise.md  blue-panthers-itch.md  blue-planes-heal.md  brave-bananas-drum.md  brave-files-wait.md  brave-jars-promise.md  brave-seals-scream.md  brave-socks-exist.md  brave-walls-deliver.md  breezy-ants-attend.md  breezy-coins-march.md  breezy-comics-cross.md  breezy-glasses-hug.md  breezy-jars-peel.md  breezy-pans-happen.md  (+1016 more)
.github/ISSUE_TEMPLATE/: issue-template.md  standard-issue-template.md
.github/workflows/: assign-issues.yml  aws-cdk.yml  binary.yml  build.yml  ci.yml  docs.yml  examples.yml  release.yml  require-labels.yml  test.yml
.husky/: pre-commit
cmd/multiplexer/: main.go
cmd/sst/: cert.go  deploy.go  dev.go  diagnostic.go  diff.go  errors.go  init.go  main.go  mosaic.go  progress.go  refresh.go  remove.go  secret.go  shell.go  state.go  tunnel.go  ui.go  upgrade.go  version.go
cmd/term/: ansi.go  main.go
cmd/term2/: main.go
cmd/v10/: main.go
console/: package.json  pnpm-lock.yaml  sst.config.ts
console/stacks/: api.ts  auth.ts  events.ts  secrets.ts  web.ts
docs/: docusaurus.config.js  package.json
examples/: .gitignore  .prettierignore  README.md  package.json  sst-env.d.ts  tsconfig.json
examples/angular-app/: README.md  package-lock.json  package.json  sst.json
examples/api-auth-auth0/: README.md  package-lock.json  package.json  sst.config.ts  sst.json  tsconfig.json  vitest.config.ts
examples/api-auth-cognito/: README.md  package-lock.json  package.json  sst.config.ts  sst.json  vitest.config.ts
examples/api-auth-facebook/: README.md  package-lock.json  package.json  sst.config.ts  sst.json  vitest.config.ts
examples/api-auth-google/: README.md  package-lock.json  package.json  sst.config.ts  sst.json  vitest.config.ts
examples/api-auth-jwt-auth0/: README.md  package-lock.json  package.json  sst.config.ts  sst.json  vitest.config.ts
examples/api-auth-jwt-cognito-user-pool/: README.md  sst.json  (+5 more)
examples/aws-python-container/src/: pyproject.toml  python.py
examples/aws-python-huggingface/src/: pyproject.toml  python.py  sst_env.pyi
examples/aws-python/src/: pyproject.toml  python.py  sst.pyi
examples/aws-rust-api/: .gitignore  Cargo.toml  README.md  package.json  sst.config.ts
examples/aws-rust-loco/: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Justfile  README.md  sst.config.ts
examples/aws-rust-loco/.github/workflows/: ci.yaml
examples/aws-rust-loco/config/: development.yaml  test.yaml
examples/aws-rust-loco/examples/: playground.rs
examples/aws-rust-loco/migration/: Cargo.toml
examples/aws-rust-loco/migration/src/: lib.rs  m20220101_000001_users.rs  m20231103_114510_notes.rs
examples/aws-rust-loco/src/: app.rs  lib.rs
examples/aws-rust-loco/src/controllers/: auth.rs  health.rs  mod.rs  notes.rs  user.rs
examples/aws-rust-loco/src/fixtures/: notes.yaml  users.yaml
examples/aws-rust-loco/src/mailers/: auth.rs
examples/aws-rust-loco/src/mailers/auth/forgot/: html.t  subject.t  text.t
examples/aws-rust-loco/src/mailers/auth/welcome/: html.t  subject.t  text.t
examples/aws-rust-loco/src/models/: mod.rs  notes.rs  users.rs
examples/aws-rust-loco/src/models/_entities/: mod.rs  notes.rs  prelude.rs  users.rs
examples/aws-rust-loco/src/tasks/: seed.rs
examples/aws-rust-loco/src/views/: auth.rs  mod.rs  user.rs
examples/aws-rust-loco/src/workers/: downloader.rs  mod.rs
examples/aws-rust-loco/tests/: mod.rs
examples/aws-rust-loco/tests/models/: mod.rs  users.rs
examples/aws-rust-loco/tests/models/snapshots/: can_create_with_password@users.snap  can_find_by_email@users.snap  can_find_by_pid-2@users.snap  can_find_by_pid@users-2.snap  can_validate_model@users.snap  handle_create_with_password_with_duplicate@users.snap
examples/aws-rust-loco/tests/requests/: auth.rs  mod.rs  notes.rs  prepare_data.rs  user.rs
examples/aws-rust-loco/tests/requests/snapshots/: can_add_note@notes_request.snap  can_delete_note@notes_request.snap  can_get_current_user_with_api_key@user_request.snap  can_get_note@notes_request.snap  can_get_notes@notes_request.snap  can_login_without_verify@auth_request.snap  can_register@auth_request-2.snap  can_register@auth_request.snap  can_reset_password@auth_request-2.snap  can_reset_password@auth_request.snap  login_with_invalid_password@auth_request.snap  login_with_valid_password@auth_request.snap
examples/aws-rust-loco/tests/tasks/: mod.rs  seed.rs
examples/rest-api-rust/: Cargo.toml  README.md  package.json  sst.config.ts  tsconfig.json
patches/: aws-cdk+2.39.1.patch
platform/: .gitignore  package.json  platform.go  tsconfig.json
proto/: test.proto
scripts/: release  snapshot
www/: .gitignore  .prettierignore  CHANGELOG.md  README.md  astro.config.mjs  bun.lockb  config.js  config.ts  docs.json  docusaurus.config.js  examples-doc.json  generate.mjs  generate.ts  netlify.toml  package.json  sidebars.js  sst-env.d.ts  sst.config.ts  tsconfig.json
(+3395 files in other folders)
