[package]
name = "aws_rust_cluster"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 0
incremental = false
panic = "abort"
opt-level = 3       # 0-3
strip = 'symbols'   # strip symbols from binary
lto = true          # enable link time optimization

[dependencies]
axum = "0.7.5"
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = ">=1.x", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "api"
path = "src/bin/handlers/api.rs"
