[project]
name = "aws-python-huggingface"
version = "0.1.0"
description = "A SST app"
authors = [
    {name = "Nick Wall", email = "mail@walln.dev" },
]
dependencies = [
    "transformers>=4.44.2",
    "torch==2.3.1+cpu",
]

# It is recommended to specify your python version to match your Lambda runtime otherwise you may
# encounter issues with dependencies.
requires-python = ">=3.11,<3.12"

[tool.setuptools]
py-modules = []

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/torch_stable.html"}